syntax = "proto3";

option go_package="rpc";

import "google/protobuf/timestamp.proto";

message Message {
  string id = 1;
  string senderName = 2;
  google.protobuf.Timestamp postTime = 3;
  string profile = 4;
  string message = 5;
}

message MessageRequest {
  string topicId = 1;
  uint32 startFrom = 2;
}

service MessageService {
  rpc Subscribe (MessageRequest) returns (stream Message);
}
